--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,7 @@
   "name": "server",
   "version": "1.0.0",
   "main": "index2.js",
+  "type": "module",
   "scripts": {
     "start": "nodemon app.js",
     "migration" : "node ./migration/models.js"
