--- a/server/.env.example
+++ b/server/.env.example
@@ -1,5 +1,6 @@
-APP_PORT = 3001
-DB_HOST = 127.0.0.1
-DB_USERNAME = 
-DB_PASSWORD = 
-DB_DATABASE = 
+#APP_PORT = 3001
+#DB_HOST = 127.0.0.1
+
+#DB_USERNAME = 
+#DB_PASSWORD = 
+#DB_DATABASE = 
